# mcp-basic

./: data.txt  output.txt  pyproject.toml
src/mcp_basic/: __init__.py  client.py  context.py
